feat: enhance user and product management with role updates, sorting options, and UI improvements